--- a/Notification Service Extension/ar.lproj/Localizable.strings
+++ b/Notification Service Extension/ar.lproj/Localizable.strings
@@ -247,3 +247,6 @@
 /* Row in Settings screen */
 "title.privacy" = "الخصوصية";
 
+/* Toast displayed while preparing video for external share */
+"toast.exporting" = "جارٍ التصدير...";
+
