--- a/Notification Service Extension/fa.lproj/Localizable.strings
+++ b/Notification Service Extension/fa.lproj/Localizable.strings
@@ -247,3 +247,6 @@
 /* Row in Settings screen */
 "title.privacy" = "حریم خصوصی";
 
+/* Toast displayed while preparing video for external share */
+"toast.exporting" = "در حال استخراج...";
+
