--- a/Notification Service Extension/id.lproj/Localizable.strings
+++ b/Notification Service Extension/id.lproj/Localizable.strings
@@ -247,3 +247,6 @@
 /* Row in Settings screen */
 "title.privacy" = "Privasi";
 
+/* Toast displayed while preparing video for external share */
+"toast.exporting" = "Memindahkan...";
+
