--- a/Share Extension/id.lproj/Localizable.strings
+++ b/Share Extension/id.lproj/Localizable.strings
@@ -216,6 +216,9 @@
 /* Row in Settings screen */
 "title.privacy" = "Privasi";
 
+/* Toast displayed while preparing video for external share */
+"toast.exporting" = "Memindahkan…";
+
 /* How many bytes from total have been uploaded */
 "uploading.bytes.progress" = "%1$@ dari %2$@";
 
