--- a/Intents Extension/id.lproj/InfoPlist.strings
+++ b/Intents Extension/id.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
 /* Bundle display name */
-"CFBundleDisplayName" = "Ekstensi Intensi";
+"CFBundleDisplayName" = "Intents Extension";
 
 /* Bundle name */
-"CFBundleName" = "Ekstensi Intensi";
+"CFBundleName" = "Intents Extension";
 
