--- a/Notification Service Extension/id.lproj/InfoPlist.strings
+++ b/Notification Service Extension/id.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
 /* Bundle display name */
-"CFBundleDisplayName" = "Ekstensi Layanan Pemberitahuan";
+"CFBundleDisplayName" = "Notification Service Extension";
 
 /* Bundle name */
-"CFBundleName" = "Ekstensi Layanan Pemberitahuan";
+"CFBundleName" = "Notification Service Extension";
 
