--- a/Halloapp/id.lproj/InfoPlist.strings
+++ b/Halloapp/id.lproj/InfoPlist.strings
@@ -2,17 +2,17 @@
 "CFBundleName" = "HalloApp";
 
 /* Privacy - Camera Usage Description */
-"NSCameraUsageDescription" = "Fitur ini memungkinkan Anda mengambil foto dan video langsung dari HalloApp.";
+"NSCameraUsageDescription" = "Fitur bisa membuat panggilan video, dan mengambil foto serta video dari HalloApp";
 
 /* Privacy - Contacts Usage Description */
-"NSContactsUsageDescription" = "Izinkan HalloApp mengakses kontak Anda agar dapat berbagi dan melihat postingan dari teman dan keluarga Anda.";
+"NSContactsUsageDescription" = "Izinkan HalloApp mengunggah kontak Anda ke server agar bisa membagi dan melihat postingan teman dan keluarga.";
 
 /* Privacy - Location When In Use Usage Description */
-"NSLocationWhenInUseUsageDescription" = "Fitur ini memungkinkan Anda menelusuri dan membagikan lokasi di sekitar Anda.";
+"NSLocationWhenInUseUsageDescription" = "Fitur ini menampilkan lokasi Anda kini atau tempat sekitar di komentar dan chat.";
 
 /* Privacy - Microphone Usage Description */
-"NSMicrophoneUsageDescription" = "Fitur ini memungkinkan Anda melakukan panggilan, mengirim postingan dan pesan audio, serta merekam video dengan suara.";
+"NSMicrophoneUsageDescription" = "Fitur bisa membuat panggilan, mengirim postingan dan pesan audio, serta merekam video dengan suara.";
 
 /* Privacy - Photo Library Usage Description */
-"NSPhotoLibraryUsageDescription" = "Fitur ini memungkinkan Anda membagikan foto dan video dari perpustakaan Anda serta menyimpan foto dan video yang Anda ambil.";
+"NSPhotoLibraryUsageDescription" = "Fitur bisa mengirim foto dan video dari galeri Anda, serta menyimpan foto terpotret.";
 
