--- a/Share Extension/fa.lproj/Localizable.strings
+++ b/Share Extension/fa.lproj/Localizable.strings
@@ -118,6 +118,9 @@
 /* Description of the new Favorites functionality. */
 "feed.privacy.list.set.favorites.description" = "اکنون میتوانید مخاطبین محبوبتان را تعیین کنید و پست‌های هالواپتان را فقط با آن‌ها به اشتراک بگذارید.";
 
+/* Alert dialog when users try to share files to group or home feed */
+"files.in.chats.only" = "فایل‌ها فقط میتوانند مستقیم به مخاطبین فرستاده شوند، نه در پست.";
+
 /* Generic label for search, mostly used as placeholder text for searchbar */
 "label.search" = "جستجو";
 
